<resources>
    <string name="app_name">Javaer</string>
    <string name="description">WeChat Sport Helper Module</string>
    <string name="reboot">重启手机</string>
    <string name="donate">启动微信</string>
    <string name="style_text">开启自定义封面文字</string>
    <string name="style_text_color">自定义封面文字颜色</string>
    <string name="like_color">自定义赞数量文字颜色</string>
    <string name="style_blank">阻止别人的装逼封面[优先1]</string>
    <string name="style_picture">自定义封面图片[优先0]</string>
    <string name="kill_pic">去除冠军头像[优先1]</string>
    <string name="pic_tip_hint">图片绝对路径</string>
    <string name="pic_tip_title">粘贴图片绝对路径[右上角菜单获取]</string>
    <string name="choose">选择图片</string>
    <string name="tip">▪ 一次重启,所有设置生效,修改设置选项后,无需再次重启,立即生效</string>
    <string name="tip1">▪ 基于Wechat Version 6.5.10</string>
    <string name="tip2">▪ 图片路径尽量用自带图库选择,必须是绝对路径[路径+名字+后缀]</string>
    <string name="tip3">▪ 新手上路,感谢@zhudongya123大神,@veryyoung</string>
    <string name="self">替换冠军头像[优先0]</string>
    <string name="color_hint">16进制颜色代码[为空默认紫色]</string>
    <string name="color_title">自定义16进制颜色值[如#ff0000为红色]</string>
    <string name="about">More</string>
    <string name="author">Javaer</string>
    <string name="au">作者</string>
    <string name="thank">zhudongya123</string>
    <string name="th">致谢</string>
    <string name="vy">veryyoung</string>
    <string name="settings">Settings</string>
    <string name="help">使用帮助</string>
    <string name="like">微信运动一键点赞</string>
    <string name="rank_title">配置当前自己排行榜名次</string>
    <string name="h1">▪ bug依旧在,不过没有上一版严重</string>
    <string name="h2">▪ 每次点击"步数排行榜",一键点赞按钮多加一个,直到充满屏幕</string>
    <string name="h3">▪ 这时,只需要框架里,去勾,重勾,重启手机即可</string>
    <string name="h4">▪ 有问题可以加我,尽量解答:yy960076413</string>
    <string name="auto_login_title">电脑登录自动确认</string>
    <string name="change_title">微信运动步数修改</string>
    <string name="sp_tip">截图扫码支持我</string>
    <string name="copy">复制微信号</string>
</resources>
