<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="like"
            android:title="@string/like"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_login"
            android:title="@string/auto_login_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="impede_icon"
            android:title="@string/kill_pic"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="self"
            android:title="@string/self"/>
        <EditTextPreference
            android:dependency="self"
            android:hint="@string/pic_tip_hint"
            android:key="self_path"
            android:title="@string/pic_tip_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="open"
            android:title="@string/style_text"/>
        <EditTextPreference
            android:dependency="open"
            android:hint="输入自定义文字(为空默认Javaer)"
            android:key="text_value"
            android:title="自定义文字"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="like_color"
            android:title="@string/like_color"/>
        <EditTextPreference
            android:dependency="like_color"
            android:hint="@string/color_hint"
            android:key="like_text_color"
            android:title="@string/color_title"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="color"
            android:title="@string/style_text_color"/>
        <EditTextPreference
            android:dependency="color"
            android:hint="@string/color_hint"
            android:key="color_value"
            android:title="@string/color_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="impede"
            android:title="@string/style_blank"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="bac_img"
            android:title="@string/style_picture"/>
        <EditTextPreference
            android:dependency="bac_img"
            android:hint="@string/pic_tip_hint"
            android:key="path"
            android:title="@string/pic_tip_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="thank"
            android:summary="@string/th"
            android:title="@string/thank"/>
        <Preference
            android:key="very"
            android:summary="@string/th"
            android:title="@string/vy"/>
        <Preference
            android:key="author"
            android:summary="@string/au"
            android:title="@string/author"/>
        <Preference
            android:key="donate"
            android:summary="Support Me"
            android:title="Alipay"/>
        <Preference
            android:key="wechat"
            android:summary="Support Me"
            android:title="Wechat"/>
    </PreferenceCategory>
</PreferenceScreen>